--- a/extensions/quarkus-rest/quarkus-rest-qute/runtime/src/main/resources/dev-templates/index.html
+++ b/extensions/quarkus-rest/quarkus-rest-qute/runtime/src/main/resources/dev-templates/index.html
@@ -8,17 +8,50 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
+  <style>
+.extension {
+    background: #205894;
+    color: white;
+    position: relative;
+}
+.extension > .guide {
+    background: #4695eb;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+  </style>
+  
   <title>Quarkus DEV Console</title>
  </head>
  <body>
   <div class="container">
    <h1>Welcome to the Quarkus DEV Console</h1>
-   <p>
-    Here are the list of extensions:
-   </p>
-   {#each simples}
-    {it.raw}
+   <div class="row row-cols-1 row-cols-md-4">
+   {#each extensions}
+    <div class="col mb-4">
+     <div class="card h-100">
+       <div class="card-body extension">
+         {#if it['metadata'] && it['metadata']['guide']}
+          <div class="guide">
+           <a href="{it['metadata']['guide']}" class="btn btn-primary" role="button">Guide</a>
+          </div>
+         {/if}
+         <h5 class="card-title">{it['name']}</h5>
+         <p class="card-text">
+          {#if it['metadata'] && it['metadata']['status'] == 'experimental'}
+           <span class="float-right badge badge-warning">EXPERIMENTAL</span>
+          {/if}
+          {it['description']}
+          <br/>
+          {#if it['_dev']}
+           {it['_dev'].raw}
+          {/if}
+         </p>
+       </div>
+     </div>
+    </div>
    {/each}
-  </div>
+   </div>
  </body>
 </html>
