--- a/extensions/arc/runtime/src/main/resources/dev-templates/quarkus-arc/removed-beans.html
+++ b/extensions/arc/runtime/src/main/resources/dev-templates/quarkus-arc/removed-beans.html
@@ -8,6 +8,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
+  <style>
+   .annotation {
+     color: gray;
+   }
+  </style>
+  
   <title>Quarkus ArC Removed Beans</title>
  </head>
  <body>
@@ -15,28 +21,42 @@
   <table class="table table-striped">
    <thead class="thead-dark">
     <tr>
-      <th scope="col">Types</th>
-      <th scope="col">Kind</th>
-      <th scope="col">Qualifiers</th>
+      <th scope="col">Bean</th>
+      <th scope="col">Source</th>
     </tr>
    </thead>
    <tbody>
-    {#for removedBean in inject:arcContainer.removedBeans}
+    {#for bean in inject:devBeanInfos.removedBeanInfos}
     <tr>
       <td>
-      {#for type in removedBean.types}
-       <code>{type}</code><br/>
-      {/for}
-      </td>
-      <td>
-       <code>{removedBean.kind}</code>
-      </td>
-      <td>
-       {#for qual in removedBean.qualifiers}
-        <code>@{qual.annotationType.simpleName}</code>
+       {#if bean.scope.name != 'javax.enterprise.context.Dependent'}
+        <span class="annotation" title="{bean.scope.name}">@{bean.scope.localName}</span><br/>
+       {/if}
+       {#for qual in bean.qualifiers}
+        {#if qual.name != 'javax.inject.Named'}
+        {#if qual.name != 'javax.enterprise.inject.Any'}
+        {#if qual.name != 'javax.enterprise.inject.Default'}
+          <span class="annotation" title="{qual.name}">@{qual.localName}</span><br/>
+        {/if}
+        {/if}
+        {/if}
        {/for}
+       <span title="{bean.type.name}">{bean.type.localName}</span>
       </td>
-     </tr>
+      <td>
+       {#if bean.kind.name() == 'METHOD'}
+        <span title="{bean.name.name}">{bean.name.localName}</span>.{bean.methodName}()
+       {/if}
+       {#if bean.kind.name() == 'FIELD'}
+        <span title="{bean.name.name}">{bean.name.localName}</span>.{bean.methodName}
+       {/if}
+       {#if bean.kind.name() == 'CLASS'}
+        <span class="badge badge-secondary">Class</span>
+       {/if}
+       {#if bean.kind.name() == 'SYNTHETIC'}
+        <span class="badge badge-secondary">Synthetic</span>
+       {/if}
+      </td>
     {/for}
    </tbody>
   </table>
